add individual dockerfile for every model
Signed-off-by: Annanay Agarwal <annanay.agarwal@grafana.com>

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -22,6 +22,6 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v4
         with:
-          context: .
+          context: models/BertBaseUncased/
           push: true
-          tags: annanay25/nautical:latest
+          tags: annanay25/nautical-bert-base-uncased:latest
