--- a/models/bert-base-uncased/requirements.txt
+++ b/models/bert-base-uncased/requirements.txt
@@ -5,6 +5,7 @@ huggingface-hub==0.12.1
 idna==3.4
 numpy==1.24.2
 packaging==23.0
+prometheus_client==0.16.0
 PyYAML==6.0
 regex==2022.10.31
 requests==2.28.2
